# CatixPlatform

./: .gitmodules
catix_messages/: package.xml
catix_messages/msg/: EightDofPlatformState.msg  PwmState.msg  ServoState.msg  TwoDofLegState.msg
catix_platform/: CMakeLists.txt  package.xml
catix_platform/src/: PlatformNode.cpp
catix_platform/src/limb/: Leg2Dof.cpp
catix_platform/src/servo/: CalibrationTable.cpp  ServoMG90S.cpp  ServoParameters.h  SignalingControllerPCA9685.cpp
pca9685_msgs/: CMakeLists.txt  package.xml
pca9685_msgs/msg/: 2DofLegState.msg  EightDofPlatformState.msg  TwoDofLegState.msg
ros_pca9685/: package.xml
ros_pca9685/src/: controller_sub.cpp  controller_sub.hpp
servo_node/: CMakeLists.txt
servo_node/src/: PlatformNode.h  ServoNode.cpp  ServoNode.h
servo_node/src/servo/: CalibrationTable.cpp  CalibrationTable.h  ServoMG90S.cpp  ServoMG90S.h  SignalingControllerInterface.h  SignalingControllerPCA9685.h
