<?xml version="1.0"?>
<package>
    <name>catix_messages</name>
    <version>0.0.1</version>
    <description>The uarm_msgs package</description>
    <maintainer email="bot.catix@gmail.com">catix</maintainer>
    <license>BSD</license>
    <url type="UFactory repositories">https://github.com/UFactory</url> 
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>
</package>
